[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/level.gd" type="Script" id=2]
[ext_resource path="res://scenes/laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Knife.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Stormfaze.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 302.5, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 247 )

[node name="level" type="Node2D"]
script = ExtResource( 2 )
laser = ExtResource( 3 )
knife = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 298, 235 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="ScoreTrack" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 100
custom_fonts/font = SubResource( 3 )
text = "Score"

[node name="updatescore" type="Timer" parent="."]
wait_time = 1.5

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 608, 243 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -309.5, -274 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 608, 243 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( -308, 268 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -10, 237 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 609, 242 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="updatescore" to="." method="_on_updatescore_timeout"]
